--- a/components/homepageBg/styles.module.scss
+++ b/components/homepageBg/styles.module.scss
@@ -1,32 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
 
-.wrapper{
-    height: 70vh;
-    background-size: cover;
-    
-    background-position: center;
+.wrapper {
+  height: 70vh;
+  margin-top: 2rem;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)),
+    url("/homeMainbg.jpg");
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  > .headings {
     text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    text-shadow: 2px 2px 2px rgb(146, 142, 142);
-    >h2{
-        margin: auto;
-        margin-top: 1rem;
-        width: 50%;
-        font-family: 'Noto Sans', sans-serif;
-        font-size: 3rem;
-        font-weight: 600;
-        color:white;
 
-        >span{
-            color : #152453;
-            -webkit-text-stroke: 1px white;
-        }
-        @media screen and (max-width : 800px) {
-            width:70%
-        }
-        @media screen and (max-width : 550px) {
-            font-size: 2.4rem;
-        }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+
+   // background-color: aqua;
+    > h2 {
+      text-shadow: 2px 2px 2px rgb(146, 142, 142);
+      
+      font-family: "Noto Sans", sans-serif;
+      font-size: 4rem;
+      font-weight: 500;
+      color: rgba(255, 255, 255, 0.777);
+
+      > span {
+        color: #152453;
+        -webkit-text-stroke: 1px white;
+      }
+      @media screen and (max-width: 800px) {
+        width: 70%;
+      }
+      @media screen and (max-width: 550px) {
+        font-size: 2.4rem;
+      }
     }
+    > h3 {
+      font-family: "Noto Sans", sans-serif;
+      font-size: 1.5rem;
+      font-weight: 200;
+      text-align: center;
+      //background-color:#152453;
+      color: rgba(255, 255, 255, 0.947);
+    }
+    > button {
+      background-color: #162755;
+      color: white;
+      font-size: 0.9rem;
+      padding: 0.6rem 1.8rem;
+      margin: 2rem;
+      width: 20%;
+      border-radius: 10px;
+    }
+  }
 }
