--- a/components/homepageBg/styles.module.scss
+++ b/components/homepageBg/styles.module.scss
@@ -55,6 +55,12 @@
       margin: 2rem;
       width: 20%;
       border-radius: 10px;
+      @media screen and (max-width:700px) {
+        width: 30%;
+      }
+      @media screen and (max-width:400px) {
+        width: 50%;
+      }
     }
   }
 }
