--- a/components/whoWeAreHome/styles.module.scss
+++ b/components/whoWeAreHome/styles.module.scss
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
-    .container{
+.whoweareWrap{
+    //background-color: aqua;
+    display: flex;
+    background-color: #F5F5F5;
     
-    margin:1rem auto;
+}    
+.container{
+ margin:1rem auto;
     width: 50%;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     >h1{
         color: #162755;
@@ -24,6 +32,7 @@
         padding: 0.6rem 1.8rem;
         margin: 2rem;
         border-radius: 10px;
+        width: 20%;
     }
 
     @media screen and (max-width : 800px) {
