--- a/components/whoWeAreHome/styles.module.scss
+++ b/components/whoWeAreHome/styles.module.scss
@@ -1,41 +1,123 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
-.whoweareWrap{
+
+.whoweareWrap {
     //background-color: aqua;
     display: flex;
-    background-color: #F5F5F5;
+    position: relative;
+    min-height: 60vh;
+    margin-top: 5rem;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    overflow: hidden;
+
+    @media screen and (max-width : 1000px) {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    @media screen and (max-width : 900px) {
+        margin-left: 0vw;
+        margin-right: 0vw;
+    }
+
+    >.img1 {
+        position: absolute;
+        height: 20rem;
+        width: 20rem;
+        z-index: 0;
+        top: 50%;
+        opacity: 60%;
+        left: 50%;
+        translate: -50% -50%;
+        display: none;
+        @media screen and (max-width : 900px) {
+            display: block;
+        }
+    }
+
+    >.charityPic {
+        width: 45%;
+        // height: 100%;
+        // background: #000;
+
+        >img{
+            width: 100%;
+            object-fit: contain;
+            
+        }
+
+        @media screen and (max-width:900px) {
+            display: none;
+        }
+    }
+}
+
+.container {
+    margin: 1rem auto;
+    position: relative;
+    width: 55%;
     
-}    
-.container{
- margin:1rem auto;
-    width: 50%;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    >h1{
+    align-items: flex-start;
+    
+    // background: #000;
+    @media screen and (max-width:900px) {
+        text-align: center;
+        align-items: center;
+
+    }
+    >h1 {
         color: #162755;
         font-family: 'Noto Sans', sans-serif;
         font-size: 3rem;
+    
         text-shadow: 2px 2px 2px rgb(146, 142, 142);
-        -webkit-text-stroke: 0.5px white ;
-        font-weight:800;
+        -webkit-text-stroke: 0.5px white;
+        font-weight: 800;
     }
-    >p{
+
+    >p {
+        color: #152453;
         margin-top: 1rem;
+        font-size: 1.2rem;
     }
-    >button{
+
+    >button {
         background-color: #162755;
         color: white;
         font-weight: lighter;
         font-size: 0.9rem;
         padding: 0.6rem 1.8rem;
-        margin: 2rem;
+        margin-top: 2rem;
+        
         border-radius: 10px;
-        width: 20%;
+        width: 40%;
+
+        @media screen and (max-width : 800px) {
+            width: 40%;
+        }
     }
+
+
 
     @media screen and (max-width : 800px) {
         width: 70%;
     }
+
+
+}
+
+#backgroundvideo {
+    width: 100vw;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
 }
