--- a/components/homepageBg/styles.module.scss
+++ b/components/homepageBg/styles.module.scss
@@ -4,7 +4,9 @@
   height: 70vh;
   margin-top: 2rem;
   background-size: cover;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(  to top,
+  rgba(5, 1, 1, 0.9),
+  rgba(27, 3, 145, 0.112)),
     url("/homeMainbg.jpg");
   background-position: center;
   display: flex;
@@ -29,7 +31,7 @@
       color: rgba(255, 255, 255, 0.777);
 
       > span {
-        color: #152453;
+        color:  rgba(255, 255, 255, 0.777);
         -webkit-text-stroke: 1px white;
       }
       @media screen and (max-width: 800px) {
@@ -44,8 +46,8 @@
       font-size: 1.5rem;
       font-weight: 200;
       text-align: center;
-      //background-color:#152453;
-      color: rgba(255, 255, 255, 0.947);
+      background-color:rgba(255, 255, 255, 0.766);
+      color: #152453;
     }
     > button {
       background-color: #162755;
