--- a/components/whatWeDoCardSection/styles.module.scss
+++ b/components/whatWeDoCardSection/styles.module.scss
@@ -5,7 +5,20 @@ margin-top: 2rem;
 //   background-color: pink;
   display: flex;
   flex-direction: column;
-
+  >h4{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    color: #162755;
+    justify-content: flex-end;
+    margin-right: 2rem;
+    margin-bottom: 1rem;
+    transition: 0.5s;
+    >&:hover{
+      transition: 0.5s;
+      
+    }
+  }
   >.cardWrapper{
     display: flex;
     align-items: center;
