--- a/components/whoWeAreHome/styles.module.scss
+++ b/components/whoWeAreHome/styles.module.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
 
 .whoweareWrap {
-    //background-color: aqua;
     display: flex;
     position: relative;
     min-height: 60vh;
@@ -30,6 +29,7 @@
         left: 50%;
         translate: -50% -50%;
         display: none;
+
         @media screen and (max-width : 900px) {
             display: block;
         }
@@ -37,13 +37,11 @@
 
     >.charityPic {
         width: 45%;
-        // height: 100%;
-        // background: #000;
 
-        >img{
+        >img {
             width: 100%;
             object-fit: contain;
-            
+
         }
 
         @media screen and (max-width:900px) {
@@ -56,24 +54,23 @@
     margin: 1rem auto;
     position: relative;
     width: 55%;
-    
     z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    
-    // background: #000;
+
     @media screen and (max-width:900px) {
         text-align: center;
         align-items: center;
 
     }
+
     >h1 {
         color: #162755;
         font-family: 'Noto Sans', sans-serif;
         font-size: 3rem;
-    
+
         text-shadow: 2px 2px 2px rgb(146, 142, 142);
         -webkit-text-stroke: 0.5px white;
         font-weight: 800;
@@ -86,18 +83,21 @@
     }
 
     >button {
-        background-color: #162755;
+        background-color: #162758;
         color: white;
         font-weight: lighter;
         font-size: 0.9rem;
         padding: 0.6rem 1.8rem;
         margin-top: 2rem;
-        
-        border-radius: 10px;
-        width: 40%;
+        border-radius: 20px;
+        width: 25%;
+
+        @media screen and (max-width : 1200px) {
+            width: 40%;
+        }
 
         @media screen and (max-width : 800px) {
-            width: 40%;
+            width: 50%;
         }
     }
 
