What we do section

--- a/components/sendDonations/styles.module.scss
+++ b/components/sendDonations/styles.module.scss
@@ -4,6 +4,7 @@
     color: #152453 ;
     background: #C0D6EC;
     text-align: center;
+    margin-top: 5rem;
     display: flex;
     align-items: center;
    >.leftContainer{
