--- a/components/projectcards/styles.module.scss
+++ b/components/projectcards/styles.module.scss
@@ -1,23 +1,32 @@
 .card {
-  padding: 0.5rem;
-  height: 15rem;
+  padding: 1rem;
+  // height: 15rem;
+
   margin: 1rem;
   width: 25rem;
-  color: white;
+  color: #152453;
   margin-left: 2rem;
-  background-color: #152453;
-  background-image: linear-gradient(  to right,
-  rgb(23, 23, 110),
-  rgba(50, 50, 100, 0.6)),
-    url("/trypic.jpg");
-    border-radius: 1rem;
+  // background-color: #152453;
+  transition: 0.2s ease-in-out;
+  >&:hover{
+    background: #F5F5F5;
+    scale: 1.1;
+  }
 
+  >img{
+    margin: auto;
+    height: 18rem;
+    border-radius: 10px;
+    // width: 80%;
+  }
   >h4{
+    margin-top: 2rem;
     font-size: 1.6rem;
   }
     > p{
-      margin-top: 0.5rem;
-      width: 40%;
+      color: #3a4d85;
+      margin-top: 1rem;
+      // width: 40%;
       word-break: break-all;
       font-size: 1rem;
       font-weight: 100;
