--- a/components/whatWeDoCardSection/styles.module.scss
+++ b/components/whatWeDoCardSection/styles.module.scss
@@ -1,9 +1,7 @@
 .cardsContainer{
 margin-top: 2rem;
 margin-bottom: 1rem;
-//   height:50vh;
   padding: 1rem;
-//   background-color: pink;
   display: flex;
   flex-direction: column;
   >h4{
@@ -19,15 +17,21 @@ margin-bottom: 1rem;
       transition: 0.5s;
       
     }
+
+    
   }
   >.cardWrapper{
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     height: 100%;
     width: 100%;
+
+    @media screen and (max-width : 960px) {
+      flex-direction: column;
+    }
+
   }
 }
 
