--- a/components/footer/styles.module.scss
+++ b/components/footer/styles.module.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
 
 .wrapper {
-  margin-top: 5rem;
+  //margin-top: 5rem;
   // background-color: #C0D6EC;
   background-image: url('/footerbg.png');
   background-size: cover;
