--- a/components/missionAndVision/styles.module.scss
+++ b/components/missionAndVision/styles.module.scss
@@ -1,42 +1,47 @@
-.wrapper{
-    display: flex;
-    width: 100%;
-    height: 60vh;
-    box-sizing: border-box;
+.wrapper {
+  display: flex;
+  //width: 100%;
+  min-height: 50vh;
+  box-sizing: border-box;
+  justify-content: space-evenly;
+  align-items: center;
+  // background-image: url("/trypic.jpg");
+  // background-color: rgba(0, 0, 0, 0.622);
+  // background-blend-mode: darken;
+  background-size: cover;
+  background-position: center;
+  color: white;
+
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    background-color: #607EAA;
-    color: white;
+  }
 
-    @media screen and (max-width:500px) {
-        flex-direction:  column;
-        justify-content: center;
-        align-items: center;
-        
+  .mission {
+    background-color: #152453;
+    width: 40vw;
+    height: 100%;
+    text-align: left;
+    padding: 2rem;
+    font-size: 1.2rem;
+
+    @media screen and (max-width: 500px) {
+      width: 100vw;
     }
+  }
+  .vision {
+    background-color: #607eaa;
+    padding: 2rem;
 
-    .heading{
-        width: 30vw;
-        height: 100%;
-        text-align: center;
-        padding-left: 2rem ;
-        padding-right: 2rem;
-        font-size: 1.2rem;
-        @media screen and (max-width:500px) {
-            width: 100vw;
-        }
+    width: 40vw;
+    height: 100%;
+    padding-left: 2rem;
+    font-size: 1.2rem;
+    padding-right: 2rem;
+    @media screen and (max-width: 500px) {
+      margin-top: 2rem;
+      width: 100vw;
     }
-    .content{
-        width: 70vw;
-        height: 100%;
-        padding-left: 2rem ;
-        padding-right: 2rem;
-        @media screen and (max-width:500px) {
-            margin-top: 2rem;
-            width: 100vw;
-        }
-    }
-
-
+  }
 }
