--- a/components/whyweserve/styles.module.scss
+++ b/components/whyweserve/styles.module.scss
@@ -1,50 +1,46 @@
-.wrapper{
-    display: flex;
-    width: 100%;
-    box-sizing: border-box;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    
+.wrapper {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+ // margin-top: 3rem;
+
+  padding-left: 5rem;
+  padding-right: 5rem;
+
+  color: #152453;
+
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  > .Image {
+    width: 40%;
+    height: 25rem;
+    padding-right: 5rem;
+    padding-top: 3rem;
+
+    border-radius: 5rem;
+  }
+
+  .content {
+    width: 70%;
     color: #152453;
-
-    @media screen and (max-width:500px) {
-        flex-direction:  column;
-        justify-content: center;
-        align-items: center;
+    padding: 3rem;
+    text-align: justify;
+    @media screen and (max-width: 500px) {
+      margin-top: 2rem;
+      width: 100vw;
+    }
+    > h3 {
+        text-align: left;
         
-    }
-
-    .heading{
-        width: 30vw;
-        text-align: center;
-        padding-left: 2rem ;
-        padding-right: 2rem;
         font-size: 1.2rem;
-        @media screen and (max-width:500px) {
-            width: 100vw;
+        @media screen and (max-width: 500px) {
+          width: 100vw;
         }
-    }
-    .content{
-        width: 70vw;
-        padding-left: 2rem ;
-        padding-right: 2rem;
-        @media screen and (max-width:500px) {
-            margin-top: 2rem;
-            width: 100vw;
-        }
-        >div{
-            >p{
-                >span{
-                    color:yellow;
-                    font-style: italic;
-                    font-weight: bold;
-                }
-            }
-        }
-
-
-    }
-
     
-
+      
+    }
+}
 }
