--- a/pages/whoweare/styles.module.scss
+++ b/pages/whoweare/styles.module.scss
@@ -1,25 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
 
 .heading {
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 3rem;
-    margin: auto;
-    margin-top: 4rem;
-    margin-bottom: 3rem;
-    text-shadow: 2px 2px 2px rgb(146, 142, 142);
-    -webkit-text-stroke: 0.5px white ;
-    font-weight: 800;
-    color: #162755;
+  font-family: "Noto Sans", sans-serif;
+  font-size: 3rem;
+
+  margin: auto;
+  margin-top: 4rem;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: #162755;
+
+  //margin-bottom: 3rem;
+  text-shadow: 2px 2px 2px rgb(146, 142, 142);
+  -webkit-text-stroke: 0.5px white;
+  font-weight: 800;
+  color: #162755;
 }
 
 .donateBtn {
-    margin-top: 3rem;
-    background-color: #162755;
-    color: white;
-    font-weight: lighter;
-    font-size: 0.9rem;
-    padding: 0.6rem 1.8rem;
-    margin: auto;
-    border-radius: 10px;
-    margin-bottom: 3rem;
+  margin-top: 3rem;
+  background-color: #162755;
+  color: white;
+  font-weight: lighter;
+  font-size: 0.9rem;
+  padding: 0.6rem 1.8rem;
+  margin: auto;
+  border-radius: 10px;
+  margin-bottom: 3rem;
 }
