--- a/components/sendDonations/styles.module.scss
+++ b/components/sendDonations/styles.module.scss
@@ -59,7 +59,7 @@
       padding: 1rem;
     }
     margin: 2rem;
-    border-left: 1px solid #162755;
+    //border-left: 1px solid #162755;
     min-height: 40vh;
     width: 60%;
     display: flex;
