--- a/components/whyweserve/styles.module.scss
+++ b/components/whyweserve/styles.module.scss
@@ -9,35 +9,65 @@
 
   color: #152453;
 
-  @media screen and (max-width: 500px) {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  @media screen and (max-width: 1000px) {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
-  > .Image {
+
+  @media screen and (max-width: 850px) {
+    flex-direction: column-reverse;
+    align-items: center;
+    ;
+  }
+
+  >.Image {
     width: 40%;
     height: 25rem;
     padding-right: 5rem;
     padding-top: 3rem;
 
     border-radius: 5rem;
+
+    @media screen and (max-width: 850px) {
+      padding-right: 0rem;
+      width: 60%;
+    }
+
+    @media screen and (max-width: 500px) {
+      padding-right: 0rem;
+      padding-bottom: 3rem;
+      width: 90%;
+    }
   }
 
   .content {
-    width: 70%;
+    width: 60%;
+
     color: #152453;
     padding: 3rem;
     text-align: justify;
+
+    // 
+    @media screen and (max-width: 850px) {
+
+      width: 100%;
+    }
+
     @media screen and (max-width: 500px) {
       margin-top: 2rem;
-      width: 100vw;
+      width: 100%;
+      padding: 0rem;
+      // background: #000;
+
     }
-    > h3 {
+
+    >h3 {
       text-align: left;
 
       font-size: 1.2rem;
+
       @media screen and (max-width: 500px) {
-        width: 100vw;
+        width: 90%;
       }
     }
   }
