--- a/components/whatWeDoCardSection/styles.module.scss
+++ b/components/whatWeDoCardSection/styles.module.scss
@@ -32,13 +32,13 @@
 }
 
 .heading {
-  font-family: "Noto Sans", sans-serif;
+  //font-family: "Noto Sans", sans-serif;
   font-size: 3rem;
   text-align: center;
   margin-bottom: 1rem;
 
   text-shadow: 2px 2px 2px rgb(146, 142, 142);
   -webkit-text-stroke: 0.5px white;
-  font-weight: 800;
+  font-weight: 700;
   color: #162755;
 }
