--- a/components/whoWeAreHome/styles.module.scss
+++ b/components/whoWeAreHome/styles.module.scss
@@ -67,13 +67,14 @@
 
   > h1 {
     color: #162755;
-    font-family: "Noto Sans", sans-serif;
+    //font-family: "Noto Sans", sans-serif;
     font-size: 3rem;
+    text-shadow: 2px 2px 2px rgb(146, 142, 142);
     //border-color: #162755;
 
-    -webkit-text-stroke: 0.5px white;
+    -webkit-text-stroke: 1px white;
 
-    font-weight: 800;
+    font-weight: 700;
   }
 
   > p {
