--- a/components/aboutUsDonateBand/styles.module.scss
+++ b/components/aboutUsDonateBand/styles.module.scss
@@ -1,7 +1,7 @@
 .donateBandWrap {
   margin-top: 4rem;
   width: 100%;
-  background: #152453;
+  background: #152453e3;
   backdrop-filter: blur(10px);
   display: flex;
   justify-content: center;
