--- a/components/iconContainer/styles.module.scss
+++ b/components/iconContainer/styles.module.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    z-index: 11                         ;
+    z-index: 11 ;
+    cursor: pointer;                        ;
     // background: #162755;
     // margin-left: 1rem;
     // margin-right: 1rem;
