--- a/components/projectcards/styles.module.scss
+++ b/components/projectcards/styles.module.scss
@@ -41,7 +41,7 @@
       margin: 1rem;
       margin-top: 2rem;
       margin-bottom: 2rem;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
 
       @media screen and (max-width: 1400px) {
         margin-top: 1rem;
@@ -54,7 +54,7 @@
     > p {
       color: #3a4d85;
       margin: 1rem;
-      word-break: break-all;
+    //  word-break: break-all;
       font-size: 1rem;
       font-weight: 100;
       @media screen and (max-width: 1400px) {
