--- a/components/homepageBg/styles.module.scss
+++ b/components/homepageBg/styles.module.scss
@@ -1,19 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .wrapper {
   height: 112vh;
   margin-top: 1rem;
   z-index: 1;
   background-size: cover;
-  background-image: 
-    url("/homepg.png");
+  background-image: url("/homepg.png");
   background-position: top;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   > .headings {
     text-align: center;
-
+    font-family: "Poppins", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,9 +23,9 @@
       text-shadow: 2px 2px 2px rgb(146, 142, 142);
 
       width: 70%;
-      font-family: "Noto Sans", sans-serif;
-      font-size: 3.5rem;
-      font-weight: 200;
+
+      font-size: 4rem;
+      font-weight: 900;
       color: white;
 
       > span {
@@ -42,12 +40,12 @@
       }
     }
     > h3 {
-      font-family: "Noto Sans", sans-serif;
+      //font-family: "Noto Sans", sans-serif;
       font-size: 1.5rem;
-      font-weight: 200;
+      font-weight: 700;
       text-align: center;
-     // background-color: rgba(255, 255, 255, 0.766);
-      color: #C0D6EC;
+      // background-color: rgba(255, 255, 255, 0.766);
+      color: #c0d6ec;
     }
     > button {
       background-color: white;
