--- a/components/footer/styles.module.scss
+++ b/components/footer/styles.module.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
+//@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
 
 .wrapper {
   //margin-top: 5rem;
@@ -25,7 +25,7 @@
     > div {
       height: 12rem;
       width: 15rem;
-      // background: #000;
+    // background: #000;
     }
 
     > .introWrapper {
@@ -37,7 +37,7 @@
       // background-color: aquamarine;
 
       > p {
-        font-family: "Noto Sans", sans-serif;
+        //font-family: "Poppins", sans-serif;
         color: #152453;
 
         margin-left: 0.6rem;
