--- a/components/volunteeerForm/styles.module.scss
+++ b/components/volunteeerForm/styles.module.scss
@@ -6,7 +6,7 @@
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 5rem;
-  border: 1px #152453 solid;
+  //border: 1px #152453 solid;
 }
 .formContainer {
   padding: 2rem;
