--- a/components/homepageBg/styles.module.scss
+++ b/components/homepageBg/styles.module.scss
@@ -2,6 +2,7 @@
 .wrapper {
   height: 112vh;
   margin-top: 1rem;
+  width: 100%;
   z-index: 1;
   background-size: cover;
   background-image: url("/homepg.png");
