--- a/components/volunteeerForm/styles.module.scss
+++ b/components/volunteeerForm/styles.module.scss
@@ -1,15 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .mainContainer {
+  position: relative;
   display: flex;
   // background-color: aqua;
   justify-content: space-evenly;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 5rem;
+  background-color: #152453;
   border: 1px #152453 solid;
+  z-index: 2;
 }
+
+.mainContainer::before{
+  content:  "";
+  height: 100%;
+  width: 100%;
+  top: -2rem;
+  left: -2rem;
+  position: absolute;
+  background: #f5f5f5;
+  z-index: 1;
+}
+
 .formContainer {
+
   padding: 2rem;
+  z-index: 2;
   // background-color: violet;
   font-size: 1.7rem;
   font-weight: 600;
@@ -18,6 +35,7 @@
   width: 50%;
 }
 .form {
+  z-index: 2;
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
@@ -32,11 +50,12 @@
     opacity: 5; /* Firefox */
     font-size: 1.2rem;
     font-weight: 300;
-    background-color: #c0d6ec48;
+    background-color: #ffffff48;
     padding: 2rem;
   }
 }
 .imgContainer {
+  z-index: 2;
   > img {
     padding: 2rem;
     height: 60vh;
@@ -44,6 +63,7 @@
   }
 }
 .button {
+  z-index: 2;
   background-color: #162755;
   color: white;
   font-weight: lighter;
