--- a/components/footer/styles.module.scss
+++ b/components/footer/styles.module.scss
@@ -1,4 +1,4 @@
-//@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
 
 .wrapper {
   //margin-top: 5rem;
@@ -8,12 +8,12 @@
   background-repeat: no-repeat;
   background-position: center;
   padding: 1rem;
-  padding-top: 3rem;
+  padding-top: 4rem;
 
   > .upperwrapper {
     display: flex;
     justify-content: space-evenly;
-
+//background-color: aqua;
     @media screen and (max-width: 650px) {
       flex-direction: column;
       align-items: center;
@@ -25,31 +25,23 @@
     > div {
       height: 12rem;
       width: 15rem;
-    // background: #000;
     }
 
     > .introWrapper {
       display: flex;
       flex-direction: row;
-      align-items: flex-start;
-      justify-content: center;
-
-      // background-color: aquamarine;
-
-      > p {
-        //font-family: "Poppins", sans-serif;
-        color: #152453;
-
-        margin-left: 0.6rem;
-        font-size: 0.8rem;
-        font-weight: 600;
-      }
+      align-items: center;
+      justify-content: flex-start;
+      margin-top: -2rem;
+   //  background-color: pink;
 
       > p {
-        font-family: "Noto Sans", sans-serif;
+        // font-family: "Noto Sans", sans-serif;
+        text-align: start;
         color: #152453;
+      //  margin-top: 1rem;
         margin-left: 0.6rem;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         font-weight: 600;
       }
     }
@@ -63,12 +55,13 @@
 
       // justify-content: center;
       > h4 {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         font-weight: 600;
       }
 
       > p {
-        margin-top: 2rem;
+        margin-top: 0.8rem;
+        font-size: 0.9rem;
       }
     }
 
@@ -81,12 +74,12 @@
 
       // justify-content: center;
       > h4 {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         font-weight: 600;
       }
 
       > p {
-        margin-top: 2rem;
+        margin-top: 0.8rem;
       }
     }
   }
