--- a/components/sendDonations/styles.module.scss
+++ b/components/sendDonations/styles.module.scss
@@ -16,6 +16,7 @@
   }
 
   @media screen and (max-width: 1000px) {
+    padding: 1rem;
     width: 90%;
   }
 
@@ -37,14 +38,8 @@
       font-size: 0.9rem;
       padding: 0.6rem 1.8rem;
       margin: 2rem;
-      // width: 40%;
       border-radius: 20px;
-      // @media screen and (max-width:700px) {
-      //   width: 30%;
-      // }
-      // @media screen and (max-width:400px) {
-      //   width: 52%;
-      // }
+      
     }
 
     @media screen and (max-width: 800px) {
