--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ html,
 body {
   /* width: 400px; */
   /* margin: 0 auto; */
-  word-break: break-all;
+  word-break: break-word;
   padding: 0;
  
   font-family:  'Poppins', sans-serif;
