--- a/components/sendDonations/styles.module.scss
+++ b/components/sendDonations/styles.module.scss
@@ -10,7 +10,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+//c0d6ecbc
+  
   @media screen and (max-width: 1400px) {
     width: 70%;
   }
@@ -24,7 +25,6 @@
   }
 
   > .leftContainer {
-  
     width: 40%;
     text-align: center;
     > h1 {
