--- a/components/navbar/styles.module.scss
+++ b/components/navbar/styles.module.scss
@@ -1,7 +1,7 @@
 .listItems {
   cursor: pointer;
   //color: #ffd800;
-  font-weight: lighter;
+  font-weight: dark;
   text-decoration: none;
 
   &:hover {
