--- a/components/aboutUsDonateBand/styles.module.scss
+++ b/components/aboutUsDonateBand/styles.module.scss
@@ -2,7 +2,8 @@
   margin-top: 2rem;
   background: #607eaadb;
   display: flex;
-  justify-content: center;
+  
+  justify-content: center; 
   align-items: center;
   @media screen and (max-width: 850px) {
     display: flex;
@@ -11,7 +12,7 @@
   > div {
     > img {
       margin: 1rem;
-      translate: -0% -30%;
+      overflow: hidden;
       border-radius: 50%;
     }
   }
@@ -26,7 +27,7 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      translate: 0 -30%;
+      
     }
     @media screen and (max-width: 1050px) {
       display: flex;
