--- a/components/footer/styles.module.scss
+++ b/components/footer/styles.module.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap");
 
 .wrapper {
-
+ 
   background-image: url("/footerbg.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,9 +15,7 @@
     @media screen and (max-width: 950px) {
       flex-direction: column;
       align-items: center;
-      > .introWrapper {
-        height: 7rem;
-      }
+      
     }
 
     > div {
@@ -37,10 +35,18 @@
         // font-family: "Noto Sans", sans-serif;
         text-align: start;
         color: #152453;
-      //  margin-top: 1rem;
+        
         margin-left: 0.6rem;
         font-size: 0.7rem;
         font-weight: 600;
+        @media screen and (max-width : 270px) {
+          margin: 1rem;
+          text-align: center;
+        }
+      }
+
+      @media screen and (max-width : 270px) {
+        flex-direction: column;
       }
     }
 
@@ -51,7 +57,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
+      word-break: break-all;
       // justify-content: center;
       > h4 {
         font-size: 1.2rem;
@@ -59,6 +65,7 @@
       }
 
       > p {
+        
         margin-top: 0.8rem;
         font-size: 0.9rem;
       }
@@ -79,6 +86,15 @@
 
       > p {
         margin-top: 0.8rem;
+      }
+
+      >div .connectLink{
+        display: flex;
+        align-self: flex-start;
+        align-items: center;
+        >p{
+          margin: 0px 5px;
+        }
       }
     }
   }
