--- a/components/sendDonations/styles.module.scss
+++ b/components/sendDonations/styles.module.scss
@@ -39,10 +39,18 @@
       padding: 0.6rem 1.8rem;
       margin: 2rem;
       border-radius: 20px;
-      
+      @media screen and (max-width: 800px) {
+        margin: 0rem;
+        padding: 0.6rem 1rem;
+        margin-top: 2rem;
+        width: 100%;
+      }
     }
 
     @media screen and (max-width: 800px) {
+      
+      margin: 0;
+      padding: 0rem 0rem;
       margin-top: 2rem;
       width: 100%;
     }
@@ -70,10 +78,10 @@
       > &:hover {
         box-shadow: #152453bb 0px 25px 20px -20px;
       }
+
+    
     }
-    > p {
-      margin-top: 1rem;
-    }
+    
 
     @media screen and (max-width: 800px) {
       padding: 1rem 15%;
