--- a/components/whoWeAreHome/styles.module.scss
+++ b/components/whoWeAreHome/styles.module.scss
@@ -51,7 +51,7 @@
 }
 
 .container {
-  margin: 1rem auto;
+  margin: 1rem ;
   position: relative;
   width: 55%;
   z-index: 1;
@@ -59,7 +59,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-
   @media screen and (max-width: 900px) {
     text-align: center;
     align-items: center;
@@ -81,6 +80,9 @@
     color: #152453;
     margin-top: 1rem;
     font-size: 1.2rem;
+    @media screen and (max-width: 800px) {
+      font-size: 0.9rem;
+    }
   }
 
   > button {
@@ -91,7 +93,7 @@
     padding: 0.6rem 1.8rem;
     margin-top: 2rem;
     border-radius: 20px;
-    width: 25%;
+    width: 35%;
 
     @media screen and (max-width: 1200px) {
       width: 40%;
@@ -103,7 +105,7 @@
   }
 
   @media screen and (max-width: 800px) {
-    width: 70%;
+    width: 100%;
   }
 }
 
